# Caja Actions
# A Caja extension which offers configurable context menu actions.
#
# Copyright (C) 2005 The MATE Foundation
# Copyright (C) 2006, 2007, 2008 Frederic Ruaudel and others (see AUTHORS)
# Copyright (C) 2009, 2010 Pierre Wieser and others (see AUTHORS)
#
# This Program is free software; you can redistribute it and/or
# modify it under the terms of the GNU General Public License as
# published by the Free Software Foundation; either version 2 of
# the License, or (at your option) any later version.
#
# This Program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
#
# You should have received a copy of the GNU General Public
# License along with this Library; see the file COPYING.  If not,
# write to the Free Software Foundation, Inc., 59 Temple Place,
# Suite 330, Boston, MA 02111-1307, USA.
#
# Authors:
#   Frederic Ruaudel <grumz@grumz.net>
#   Rodrigo Moya <rodrigo@mate-db.org>
#   Pierre Wieser <pwieser@trychlos.org>
#   ... and many others (see AUTHORS)

api_includedir = $(pkgincludedir)

api_include_HEADERS = \
	na-extension.h										\
	\
	na-dbus.h											\
	na-iexporter.h										\
	na-iimporter.h										\
	na-ifactory-provider.h								\
	na-ifactory-provider-provider.h						\
	na-iio-provider.h									\
	\
	na-core-utils.h										\
	na-data-boxed.h										\
	na-data-def.h										\
	na-data-types.h										\
	na-mateconf-monitor.h									\
	na-mateconf-utils.h									\
	na-icontext.h										\
	na-iduplicable.h									\
	na-ifactory-object.h								\
	na-ifactory-object-data.h							\
	na-object-api.h										\
	na-object.h											\
	na-object-id.h										\
	na-object-item.h									\
	na-object-action.h									\
	na-object-profile.h									\
	na-object-menu.h									\
	$(NULL)
